# Simplii

./: .gitignore  .pylintrc  .travis.yml  CITATION.md  CONTRIBUTING.md  README.md  app.py  pyproject.toml  requirements.txt  test.py
.github/workflows/: codecov.yml
UnitTests/: TestErrorPages.py  database_connection_test.py  database_crud_test.py  database_tables_test.py  db_test.py  login_page_test.py  sample_test.py  sql_helper.py
docs/Phase 2/: ImprovementsDoc  ImprovementsDoc.md
docs/Phase 3/: API_instruction.md  ImprovementsDoc.md  Why Simplii.md  proj3rubric.md
issue_templates/: Bug_Report.md
sql/: ddl.sql
src/: routing.py
src/controller/: category_controller.py  project_controller.py  task_controller.py
src/error_handler/: error.py
src/login/: login.py
src/models/: category_model.py  employee_model.py  project_model.py  sql_helper.py  task_model.py
static/css/: layout.css
templates/: base.html  edit_task.html  home.html  login.html  view_all_employees.html  view_all_project.html  view_all_tasks.html  view_task_employee.html  view_user_details.html  view_user_tasks.html
templates/employees/: all_employees.html
templates/layout/: base.html  nav.html  user_details.html
templates/projects/: all_projects.html
templates/tasks/: all_tasks.html  backlog.html  future_tasks.html  next_week.html  this_week.html
